deploy/endpoint/60-rstudio.yaml
---
# Scale versitygw to zero first: the data volume is ReadWriteOnce.
# The image is the Bioconductor container plus rclone (../../Dockerfile).
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rstudio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rstudio
  template:
    metadata:
      labels:
        app: rstudio
    spec:
      containers:
      - name: rstudio
        image: ghcr.io/bioconductor/hubsingestbiocrstudio:${HUBSINGEST_BIOC_VERSION}
        imagePullPolicy: Always
        ports:
        - containerPort: 8787
        volumeMounts:
        - name: data-volume
          mountPath: /home/rstudio/shareddata
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: versitygw-data
---
apiVersion: v1
kind: Service
metadata:
  name: rstudio
spec:
  ports:
  - port: 8787
    targetPort: 8787
  selector:
    app: rstudio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rstudio-ingress
  annotations:
    cert-manager.io/cluster-issuer: ${HUBSINGEST_CLUSTER_ISSUER}
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: ${HUBSINGEST_INGRESS_CLASS}
  tls:
  - hosts:
    - ${HUBSINGEST_USER}-rstudio.${HUBSINGEST_DOMAIN}
    secretName: ${HUBSINGEST_USER}-rstudio-tls
  rules:
  - host: ${HUBSINGEST_USER}-rstudio.${HUBSINGEST_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rstudio
            port:
              number: 8787
